--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.username=sa
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=test_user
+spring.datasource.password=123456
